Name:           Rawhide
Version:        0.0
Cabal-Version:  >= 1.2
License:        MIT
Author:         Sam Rijs
Synopsis:       Rolling, rolling, rolling...
Build-Type:     Simple

Executable rawhide-http
  Main-Is:        Server.hs
  Build-Depends:  base, containers, bytestring, QuickCheck, aeson, warp, wai, blaze-builder, http-types, cryptohash, Chart, Chart-cairo, lens, data-default-class, statistics, vector
